# luna

./: .gitignore  Cargo.toml  Luna-Architecture.md  README.md
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: document.rs  language.rs  lib.rs  navigation.rs  repo_scan.rs  scope_resolution.rs  snippet.rs
crates/intelligence/src/core_local/: mod.rs  symbol.rs  text_range.rs
crates/intelligence/src/language/: test_utils.rs
crates/intelligence/src/language/c/: mod.rs
crates/intelligence/src/language/c_sharp/: mod.rs
crates/intelligence/src/language/cpp/: mod.rs  scopes.scm
crates/intelligence/src/language/go/: mod.rs
crates/intelligence/src/language/java/: mod.rs
crates/intelligence/src/language/javascript/: mod.rs  scopes.scm
crates/intelligence/src/language/php/: mod.rs
crates/intelligence/src/language/python/: mod.rs
crates/intelligence/src/language/r/: mod.rs
crates/intelligence/src/language/ruby/: mod.rs
crates/intelligence/src/language/typescript/: mod.rs  scopes.scm
crates/intelligence/src/scope_resolution/: debug.rs  def.rs  import.rs  reference.rs  scope.rs
src/: llm.rs  main.rs  tpar.rs
src/agent/: Cargo.toml
src/agent/src/: context_engine.rs  intel_adapter.rs  lib.rs  llm.rs  react.rs  tools.rs  types.rs
src/cache/: Cargo.toml
src/cache/src/: lib.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/cli/src/tui/: mod.rs  runtime_bridge.rs  state.rs  ui.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/config/: Cargo.toml
src/config/src/: lib.rs
src/context/: Cargo.toml
src/context/examples/: context_pipeline_demo.rs  semantic_search.rs
src/context/src/: cache.rs  context_chunk.rs  index_chunk.rs  lib.rs  query.rs  refill.rs
src/context/src/vector/: chunking.rs  embedding.rs  index.rs  mod.rs  semantic.rs
src/core/: Cargo.toml
src/core/src/: code_chunk.rs  lib.rs  symbol.rs  text_range.rs
src/error/: Cargo.toml
src/error/src/: lib.rs
src/index/: Cargo.toml
src/index/src/: chunk.rs  error.rs  lib.rs
src/intelligence/: Cargo.toml  document.rs  lib.rs  navigation.rs  repo_scan.rs  scope_resolution.rs  snippet.rs
src/intelligence/language/rust/: mod.rs
src/intelligence/scope_resolution/: debug.rs
src/llm/: Cargo.toml
src/llm/src/: lib.rs  openai.rs
src/memory/: Cargo.toml
src/memory/src/: fingerprint.rs  learner.rs  lib.rs  store.rs
src/react/: Cargo.toml
src/react/src/: agent.rs  context.rs  lib.rs  planner.rs  util.rs
src/react/src/agent/: fix_loop.rs  loop_framework.rs  loop_impl.rs  mod.rs  safety.rs
src/react/src/context/: mod.rs  render.rs  select.rs
src/react/src/state/: enhanced.rs  mod.rs  patterns.rs
src/react/tests/: integration_test.rs
src/runtime/: Cargo.toml
src/runtime/examples/: intent_classification.rs  llm_intent_classification.rs
src/runtime/src/: command.rs  config.rs  context_bridge.rs  healing.rs  intent.rs  intent_classifier.rs  lib.rs  planner.rs  recorder.rs  recorder_jsonl.rs  refill_trigger.rs  render.rs  request.rs  response.rs  router.rs  runtime.rs  safety.rs  tpar.rs
src/server/: Cargo.toml  handlers.rs  main.rs  rpc.rs  server.rs  session.rs  util.rs  virtual_tools.rs
src/server/mcp/: mod.rs
src/server/src/: main.rs
src/session/: Cargo.toml
src/session/src/: jsonl_store.rs  lib.rs
src/toolkit/: Cargo.toml
src/toolkit/src/: lib.rs  registry.rs  tools.rs
src/tools/: Cargo.toml
src/tools/src/: error.rs  fs.rs  lib.rs  search.rs  terminal.rs
src/tools/src/error_parse/: cargo.rs  default.rs  error_record.rs  mod.rs
src/tools/src/search/: backend.rs  keyword.rs  mod.rs  options.rs  refill.rs  symbol.rs
