[workspace]
resolver = "2"
members = [
    "src/core",
    "src/error",
    "src/llm",
    "src/intelligence",
    "src/tools",
    "src/session",
    "src/runtime",
    "src/cli",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.18", features = ["v4"] }
parking_lot = "0.12"
