[workspace]
resolver = "2"
members = [
    "src/core",
    "src/error",
    "src/llm",
    "src/intelligence",
    "src/context",
    "src/tools",
    "src/session",
    "src/runtime",
    "src/cli",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.18", features = ["v4"] }
parking_lot = "0.12"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
unicode-width = "0.2"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }