[workspace]
resolver = "2"
members = [
    "crates/error",
    "crates/intelligence",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"

# Bin package
[package]
name = "luna"
version.workspace = true
edition.workspace = true

[[bin]]
name = "luna"
path = "src/main.rs"

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Workspace crates
error = { path = "crates/error" }
intelligence = { path = "crates/intelligence" }
