[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "luna"
path = "src/main.rs"

[dependencies]
runtime = { path = "../runtime" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }
unicode-width = { workspace = true }
error = { path = "../error" }
