[package]
name = "context"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
_core = { path = "../core", package = "core" }
error = { path = "../error" }
intelligence = { path = "../intelligence" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.18", features = ["v4", "serde"] }
petgraph = { version = "0.6", default-features = false, features = ["serde-1"] }
