[package]
name = "intelligence"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
core = { path = "../core" }
tree-sitter = "0.20.10"
tree-sitter-tags = "0.20.2"
tree-sitter-c = "0.20.6"
tree-sitter-go = { git = "https://github.com/tree-sitter/tree-sitter-go", rev = "05900fa" }
tree-sitter-javascript = "0.20.1"
tree-sitter-python = "=0.20.2"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20.2"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java", tag = "v0.20.0" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "5ead1e2" }
tree-sitter-ruby = "0.20.0"
tree-sitter-r = "0.19.5"
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php", rev = "33e3016" }
tree-sitter-protobuf = { git = "https://github.com/imotai/tree-sitter-protobuf", rev = "5aef38d" }
petgraph = { version = "0.6.4", default-features = false, features = ["serde-1"] }
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
rayon = "1.8.0"

[dev-dependencies]
expect-test = "1.4.1"
