[package]
name = "react"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
intelligence = { path = "../intelligence" }
index = { path = "../index" }
llm = { path = "../llm" }
tools = { path = "../tools" }
toolkit = { path = "../toolkit" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.21"

[dev-dependencies]
tempfile = "3"
