[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tokio = { workspace = true }
session = { path = "../session" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
intelligence = { path = "../intelligence" }
context = { path = "../context" }
tools = { path = "../tools" }
uuid = { workspace = true }
error = { path = "../error" }
llm = { path = "../llm" }
_core = { path = "../core", package = "core" }