[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = { path = "../agent" }
core = { path = "../core" }
intelligence = { path = "../intelligence" }
index = { path = "../index" }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tokenizers = "0.21"
ahash = "0.8"
