[[bin]]
name = "luna-server"
path = "main.rs"

[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }

ahash = "0.8"
tokenizers = "0.21"

core = { path = "../core" }
llm = { path = "../llm" }
react = { path = "../react" }
toolkit = { path = "../toolkit" }
tools = { path = "../tools" }
error = { path = "../error" }
session = { path = "../session" }
